# XML2FabricWASM

./: Cargo.toml  README.md  index.js  package-lock.json  webpack.config.js
src/: lib.rs
